@@ -1,3 +1,7 @@
+Mon Jun 17 2002  Vitezslav Samel <samel@mail.cz>
+	* ublock.c:
+	insert braces to make if() block evident
+
 Sun Jun  9 2002  Vitezslav Samel <samel@mail.cz>
 	* b.c, bw.c, cmd.c, hash.c, kbd.c, macro.c, main.c, rc.c, regex.c,
 	termcap.c, tty.c, ublock.c, umath.c, vfile.c:
